--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,10 @@ body {
 }
 
 header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  background-color: white;
   padding: 10px 0px;
   box-shadow: 0 5px 20px #80808091;
 }
@@ -44,7 +48,7 @@ nav ul li a {
 }
 /* banner section */
 .banner-section {
-  padding: 50px;
+  padding: 130px 0 20px 0;
   text-align: center;
 }
 .banner-section h1 {
@@ -79,18 +83,56 @@ nav ul li a {
 .feature {
   padding: 26px;
 }
-.text-align{
-    text-align: right;
+.text-align {
+  text-align: right;
 }
 .feature h2 {
   font-size: 60px;
   color: #ff5938;
   text-transform: capitalize;
 }
-.feature h2 span{
-    color: #4f0446;
+.feature h2 span {
+  color: #4f0446;
 }
 .feature p {
   font-size: 18px;
   color: #4f0446;
+}
+/* blog section */
+.blog-section {
+  margin-bottom: 50px;
+}
+.col {
+  width: 33%;
+  float: left;
+  box-sizing: border-box;
+  padding: 12px;
+}
+.blog {
+  padding: 20px;
+  border-radius: 5px;
+  color: #4f0446;
+}
+.blog:hover {
+  background-color: rgba(153, 148, 148, 0.25);
+  transition: all 0.5s ease;
+}
+.blog img {
+  max-width: 100%;
+  height: 200px;
+}
+.blog h3 {
+  font-size: 25px;
+}
+.blog p {
+  font-size: 18px;
+}
+.red {
+  background-color: rgba(255, 0, 0, 0.11);
+}
+.green {
+  background-color: rgba(0, 128, 0, 0.11);
+}
+.yellow {
+  background-color: rgba(255, 255, 0, 0.11);
 }
